# lpdensity

./: .readthedocs.yaml  README.md
Python/: lpdensity_illustration.py
Python/lpdensity/: README.md  ToBuild.txt  requirements.txt  setup.cfg  sphinx-documentation.txt
Python/lpdensity/docs/source/: conf.py  lpdensity.rst
Python/lpdensity/lpdensity.egg-info/: PKG-INFO  SOURCES.txt
Python/lpdensity/src/lpdensity/: __init__.py  lpbwdensity.py  lpbwdensity_fn.py  lpdensity.py  lpdensity_fn.py
Python/lpdensity/src/lpdensity.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
Python/lpdensity/tests/: example.py  jtpa.csv  r_comparison.R  rep_data.csv  rtesting.R
R/: lpdensity_illustration.R
R/lpdensity/: .Rhistory  DESCRIPTION  NAMESPACE  lpdensity-test-Stata.R  lpdensity-test-Stata.do  lpdensity-test.R
R/lpdensity/R/: .Rhistory  lpbwdensity.R  lpbwdensity_fn.R  lpbwdensity_methods.R  lpdensity-package.R  lpdensity.R  lpdensity_fn.R  lpdensity_methods.R
R/lpdensity/inst/: CITATION
R/lpdensity/man/: Cgenerate.Rd  Ggenerate.Rd  Sgenerate.Rd  Tgenerate.Rd  bw_IMSE.Rd  bw_IROT.Rd  bw_MSE.Rd  bw_ROT.Rd  (+16 more)
stata/: lpbwdensity.ado  lpbwdensity.sthlp  lpdensity.ado  lpdensity.pkg  lpdensity.sthlp  lpdensity_Cgen.mo  lpdensity_Ggen.mo  lpdensity_Sgen.mo  lpdensity_Tgen.mo  lpdensity_bwIMSE.mo  lpdensity_bwIROT.mo  lpdensity_bwMSE.mo  lpdensity_bwROT.mo  lpdensity_fn.mo  lpdensity_fun.do  lpdensity_illustration.do  lpdensity_normDgp.mo  lpdensity_optFunc.mo  lpdensity_quantile.mo  lpdensity_rep.mo  lpdensity_unique.mo  lpdensity_whichmin.mo  stata.toc
(+126 files in other folders)
