[metadata]
name = lpdensity
version = 2.4
author = Rajita Chandak
author_email = rchandak@princeton.edu
description = Implements local polynomial point estimation with robust bias-corrected uniform confidence intervals.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nppackages/lpdensity
project_urls =
    Bug Tracker = https://github.com/nppackages/lpdensity/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires =
    numpy
    pandas
    scipy
    sympy
    plotnine

[options.packages.find]
where = src
